# hash-a-matic

./: .gitignore  LICENSE  README.md  setup.cfg
src/hashamatic/: cli.py  mastobot.py  rssbot.py
src/hashamatic/account/: __init__.py  _twitter.py  mastodon.py  tumblr.py
src/hashamatic/command/: Tiles.py  __init__.py  _template.py  blocks.py  boggle.py  caves.py  maze.py  plasma.py  recycling.py  status.py  tree.py
src/hashamatic/resources/: words.txt
