[metadata]
name = hashAmatic
version = 0.10.0
description = Python Bot
author = Tim
author_email = snail-coupe@outlook.com
license = MIT License
licence_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
install_requires =
    pillow
    cmd2
    twitter
    pytumblr2
    Mastodon.py
    speedtest-cli
    uk-bin-day @ git+ssh://git@github.com/snail-coupe/uk-bin-day.git
    bs4
    requests
    lxml
    pyyaml
    tendo
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
hashamatic.resources = *.png

[options.entry_points]
console_scripts =
    hashamatic = hashamatic.cli:main
    rssbot = hashamatic.rssbot:main